[EFL][WK2] WorkQueue::dispatchAfterDelay() doesn't work properly. https://bugs.webkit.org/show_bug.cgi?id=91179

Patch by Byungwoo Lee <bw80.lee@samsung.com> on 2012-09-12
Reviewed by Gyuyoung Kim.

When UI Process is crashed and WebProcess's ecore main loop is very
busy or lockup also, watchdocCallback() function in the
ChildProcess.cpp doesn't triggered. And this is because of that
WorkQueue::dispatchAfterDelay() function uses ecore timer for getting
timer event.

For removing the dependency between the dispatchAfterDelay() and ecore
main loop, new timer event mechanism is added to WorkQueue main loop.

* Platform/WorkQueue.h:
(TimerWorkItem):
(WorkQueue::TimerWorkItem::dispatch):
(WorkQueue::TimerWorkItem::expireTime):
(WorkQueue::TimerWorkItem::expired):
(WorkQueue):
* Platform/efl/WorkQueueEfl.cpp:
(WorkQueue::TimerWorkItem::create):
(WorkQueue::TimerWorkItem::TimerWorkItem):
(WorkQueue::performFileDescriptorWork):
(WorkQueue::getCurrentTime):
(WorkQueue::getNextTimeOut):
(WorkQueue::performTimerWork):
(WorkQueue::workQueueThread):
(WorkQueue::dispatchAfterDelay):

Canonical link: https://commits.webkit.org/114378@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@128289 268f45cc-cd09-0410-ab3c-d52691b4dbfc